--- a/styles.css
+++ b/styles.css
@@ -48,5 +48,8 @@ h3 {
     font-weight: 400;
     font-size: 1.5rem;
     margin-left: 1.75rem;
-    margin-bottom 1rem;
+    margin-bottom: 1rem;
+}
+
+ul {
 }
