--- a/styles.css
+++ b/styles.css
@@ -42,7 +42,6 @@ h2 {
     font-weight: 400;
 }
 
-
 h3 {
     font-family: "Young Serif", serif;
     font-weight: 400;
@@ -51,5 +50,9 @@ h3 {
     margin-bottom: 1rem;
 }
 
-ul {
+.attribution {
+    position: absolute;
+    bottom: 10px;
+    margin-top: 60px;
+    font-size: 12px;
 }
