--- a/styles.css
+++ b/styles.css
@@ -1,7 +1,7 @@
 body {
     font-family: "Outfit", sans-serif;
     display: flex;
-;   flex-direction: row;
+;   flex-direction: column;
     justify-content: center;
     align-items: center;
     background-color: #F7F7F7;
@@ -51,8 +51,7 @@ h3 {
 }
 
 .attribution {
-    position: absolute;
-    bottom: 10px;
-    margin-top: 60px;
-    font-size: 12px;
+    width: 100%;
+    text-align: center;
+    font-size: 16px;
 }
