--- a/styles.css
+++ b/styles.css
@@ -1,15 +1,28 @@
+
+:root {
+    --White: hsl(0, 0%, 100%);
+    --Rose-White: hsl(330, 100%, 98%);
+    --Eggshell: hsl(30, 54%, 90%);
+    --Light-Grey: hsl(30, 18%, 87%);
+    --Wenge-Brown: hsl(30, 10%, 34%);
+    --Dark-Charcoal: hsl(24, 5%, 18%);
+    --Nutmeg: hsl(14, 45%, 36%);
+    --Dark-Raspberry: hsl(332, 51%, 32%);
+}
+
 body {
     font-family: "Outfit", sans-serif;
     display: flex;
 ;   flex-direction: column;
     justify-content: center;
     align-items: center;
-    background-color: #F7F7F7;
+    background-color: var(--white);
+    color: var(--Wenge-Brown);
 }
 
 h1 {
     font-family: "Young Serif", serif;
-    color: #312E2C;
+    color: var(--Dark-Charcoal);
     font-weight: 400;
     font-size: 2.5rem;
 }
@@ -18,7 +31,7 @@ h1 {
     display: flex;
     flex-direction: column;
     justify-content: center;
-    background-color: #FFF7FB;
+    background-color: var(--Rose-White);
     border-radius: 12px;
 }
 
@@ -35,7 +48,7 @@ main {
 }
 
 h2 {
-    color: #854632;
+    color: var(--Nutmeg);
     font-size: 1.75rem;
     text-align: center;
     font-family: "Young Serif", serif;
@@ -48,10 +61,34 @@ h3 {
     font-size: 1.5rem;
     margin-left: 1.75rem;
     margin-bottom: 1rem;
+    color: var(--Dark-Raspberry);
 }
 
 .attribution {
-    width: 100%;
-    text-align: center;
-    font-size: 16px;
+    bottom: 10px;
+    margin-top: 60px;
+    font-size: 12px;
+}
+
+  .table-row {
+    display: flex;
+    flex-direction: row;
+}
+ .nutrition-value{
+        margin-left: auto;
+        color: var(--Nutmeg);
+        font-weight: 700;
+ }
+
+ ol {
+    color: var(--Wenge-Brown);
+ }
+
+  li::marker {
+    color: var(--Nutmeg);
+    font-weight: 600;
+}
+
+.callout li::marker {
+    color: var(--Dark-Raspberry);
 }
